--- a/templates/buyerInfo.html
+++ b/templates/buyerInfo.html
@@ -132,61 +132,64 @@ name:当前用户name
                 phone:phone,
             },
             success:function (data){
-                for (let i = 0; i<data.length; i++) {
-                    const item = data[i];
-
-                    const item_div = document.createElement("div");
-                    item_div.setAttribute("class", "item-box");
-                    container.append(item_div);
-
-                    const item_img_div = document.createElement("div");
-                    const item_img = document.createElement("img");
-
-                    item_img_div.setAttribute("class", "item-img-box");
-                    item_img.setAttribute("src", item.image_src);
-
-                    item_img_div.append(item_img);
-                    item_div.append(item_img_div);
-
-                    const item_name_div = document.createElement("div");
-                    const item_name = document.createElement("span");
-
-                    item_name_div.setAttribute("class", "item-name-box");
-                    item_name.innerText = item.product_name;
-
-                    item_name_div.append(item_name);
-                    item_div.append(item_name_div);
-
-                    const item_quantity_div = document.createElement("div");
-                    const item_quantity = document.createElement("span");
-
-                    item_quantity_div.setAttribute("class", "item-quantity-box");
-                    item_quantity.innerText = item.purchase_quantity;
-
-                    item_quantity_div.append(item_quantity);
-                    item_div.append(item_quantity_div);
-
-                    const item_time_div = document.createElement("div");
-                    const item_time = document.createElement("span");
-
-                    item_time_div.setAttribute("class", "item-time-box");
-                    item_time.innerText = item.purchase_time;
-
-                    item_time_div.append(item_time);
-                    item_div.append(item_time_div);
-
-                    const item_price_div = document.createElement("div");
-                    const item_price = document.createElement("span");
-
-                    item_price_div.setAttribute("class", "item-price-box");
-                    item_price.innerText = item.total_price;
-
-                    item_price_div.append(item_price);
-                    item_div.append(item_price_div);
-                }
-
+                render_buyer_purchased(data)
             }
         })
+    }
+
+    function render_buyer_purchased(data){
+        for (let i = 0; i<data.length; i++) {
+            const item = data[i];
+
+            const item_div = document.createElement("div");
+            item_div.setAttribute("class", "item-box");
+            container.append(item_div);
+
+            const item_img_div = document.createElement("div");
+            const item_img = document.createElement("img");
+
+            item_img_div.setAttribute("class", "item-img-box");
+            item_img.setAttribute("src", item.image_src);
+
+            item_img_div.append(item_img);
+            item_div.append(item_img_div);
+
+            const item_name_div = document.createElement("div");
+            const item_name = document.createElement("span");
+
+            item_name_div.setAttribute("class", "item-name-box");
+            item_name.innerText = item.product_name;
+
+            item_name_div.append(item_name);
+            item_div.append(item_name_div);
+
+            const item_quantity_div = document.createElement("div");
+            const item_quantity = document.createElement("span");
+
+            item_quantity_div.setAttribute("class", "item-quantity-box");
+            item_quantity.innerText = item.purchase_quantity;
+
+            item_quantity_div.append(item_quantity);
+            item_div.append(item_quantity_div);
+
+            const item_time_div = document.createElement("div");
+            const item_time = document.createElement("span");
+
+            item_time_div.setAttribute("class", "item-time-box");
+            item_time.innerText = item.purchase_time;
+
+            item_time_div.append(item_time);
+            item_div.append(item_time_div);
+
+            const item_price_div = document.createElement("div");
+            const item_price = document.createElement("span");
+
+            item_price_div.setAttribute("class", "item-price-box");
+            item_price.innerText = item.total_price;
+
+            item_price_div.append(item_price);
+            item_div.append(item_price_div);
+        }
     }
 
     </script>
