--- a/templates/buyerInfo.html
+++ b/templates/buyerInfo.html
@@ -12,7 +12,7 @@ name:当前用户name
 {% endblock %}
 
 {% block nav_bar %}
-    <button class="nav-button" id="info" onclick="render_user_info(container)">info</button>
+    <button class="nav-button" id="info" onclick="get_user_info(container)">info</button>
     <button class="nav-button" id="charge" onclick="get_money(container)">charge</button>
     <button class="nav-button" id="purchased" onclick="get_purchased(container)">purchased</button>
 {% endblock %}
