--- a/templates/buyerInfo.html
+++ b/templates/buyerInfo.html
@@ -28,7 +28,7 @@ name:当前用户name
         container = $(".container");
         
         $(document).on("sessionLoaded", function () {
-            render_user_info(container);
+            get_user_info(container);
         });
     }
 
