--- a/templates/base_personInfo.html
+++ b/templates/base_personInfo.html
@@ -2,6 +2,7 @@
 
 {% block main %}
     <link rel="stylesheet" href="/static/css/base_personInfo.css">
+    <script src="/static/js/render_user_info.js"></script>
     <script>
     window.onload = function (){
         $("#log_out").click(function (){
