--- a/templates/buyerInfo.html
+++ b/templates/buyerInfo.html
@@ -30,6 +30,22 @@ name:当前用户name
         });
     }
 
+    function get_user_info(){
+        let data;
+        $.ajax({
+            url:"/buyer/buyerInfo",
+            type: 'get',
+            contentType: "application/json",
+            dataType: "json",
+            data:{
+                phone: phone
+            },
+            success:function (data){
+                render_user_info(data)
+            }
+        })
+    }
+
     function get_money() {
 
         $.ajax({
