--- a/templates/base.html
+++ b/templates/base.html
@@ -16,38 +16,57 @@ type:当前用户类型，1为买家，0为卖家
     <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 {#const#}
     <script>
-        let phone;
-        let type;
-        let name;
+    let phone;
+    let type;
+    let name;
+    function get_user_image(){
         $.ajax({
-                url:"/getSession",
-                type:"get",
-                contentType: "application/json",
-                dataType: "json",
-                success:function (data){
-                    phone = data.phone;
-                    type = data.type;
-                    name = data.name;
-                    const user_box = $(".user-box");
-                    const a = document.createElement("a");
-                    if (type==="0"){
-                        a.setAttribute("href", "/sellerInfo");
-                        a.innerText = name;
-                    }else if(type==="1") {
-                        a.setAttribute("href", "/buyerInfo");
-                        a.innerText = name;
-                    }else{
-                        a.setAttribute("href", "/login");
-                        a.innerText = "Login";
-                    }
-                    user_box.append(a)
+            url: "/images/get_image_user",
+            type: "get",
+            contentType: "application/json",
+            dataType: "json",
+            success: function (data) {
+                const user_img = document.createElement("img");
 
-                    $(document).trigger("sessionLoaded");
-                },
-                error:function (){
-                    $(document).trigger("sessionLoaded");
+                user_img.setAttribute("class", "user-img");
+                user_img.setAttribute("src", data.url);
+
+                $(".user-img").append(user_img);
+            }
+        })
+    }
+
+    function get_session(){
+        $.ajax({
+            url:"/getSession",
+            type:"get",
+            contentType: "application/json",
+            dataType: "json",
+            success:function (data){
+                phone = data.phone;
+                type = data.type;
+                name = data.name;
+                const user_box = $(".user-name");
+                const a = document.createElement("a");
+                if (type==="0"){
+                    a.setAttribute("href", "/sellerInfo");
+                    a.innerText = name;
+                }else if(type==="1") {
+                    a.setAttribute("href", "/buyerInfo");
+                    a.innerText = name;
+                }else{
+                    a.setAttribute("href", "/login");
+                    a.innerText = "Login";
                 }
-            })
+                user_box.append(a)
+
+                $(document).trigger("sessionLoaded");
+                },
+            error:function (){
+                $(document).trigger("sessionLoaded");
+            }
+        })
+    }
     </script>
      {% block script %}{% endblock %}
 </head>
@@ -63,6 +82,8 @@ type:当前用户类型，1为买家，0为卖家
     </div>
 {#用户info#}
     <div class="user-box">
+        <div class="user-img"></div>
+        <div class="user-name"></div>
     </div>
 {#主体#}
 </div>
