--- a/templates/shop.html
+++ b/templates/shop.html
@@ -9,21 +9,15 @@
     <script>
 
     let page_num;
-
-
-
-    window.onload = function () {
-
+    
+    $(document).on("sessionLoaded", function() {
+        console.log(111)
         page_num = 1;
+        get_item();
+        get_next_page();
+        get_prev_page();
 
-        $(document).on("sessionLoaded", function() {
-
-            get_item();
-            get_next_page();
-            get_prev_page();
-
-        });
-    }
+    });
     
     function get_item(){
         $.ajax({
@@ -65,7 +59,7 @@
         button.innerText = "next";
         button.onclick = function () {
             page_num++;
-            generate()
+            get_item();
         }
         $(".next").append(button);
     }
