--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,10 @@ type:当前用户类型，1为买家，0为卖家
     let phone;
     let type;
     let name;
+
+    window.onload = function (){
+        get_session();
+    }
     function get_user_image(){
         $.ajax({
             url: "/images/get_image_user",
@@ -61,6 +65,7 @@ type:当前用户类型，1为买家，0为卖家
                 user_box.append(a)
 
                 $(document).trigger("sessionLoaded");
+                get_user_image();
                 },
             error:function (){
                 $(document).trigger("sessionLoaded");
