--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@ register
 
 {% block script %}
     <script>
-    var user_type;
+    let user_type;
 
     function register(){
         $.ajax({
@@ -33,7 +33,8 @@ register
     </script>
 
     <script>
-    window.onload = function (){
+    $(document).on("sessionLoaded", function() {
+
         $("#buyer").click(function (){
             console.log(this.value);
             user_type = this.value;
@@ -42,10 +43,10 @@ register
             console.log(this.value);
             user_type = this.value;
         });
-        $("#submit").click(function (){
+        $("#submit").click(function () {
             register();
-        });
-    }
+        })
+    })
     </script>
 {% endblock %}
 
