--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,9 @@ type:当前用户类型，1为买家，0为卖家
             type: "get",
             contentType: "application/json",
             dataType: "json",
+            data:{
+                phone: phone,
+            },
             success: function (data) {
                 const user_img = document.createElement("img");
 
