--- a/templates/comment.html
+++ b/templates/comment.html
@@ -148,7 +148,11 @@
 {% endblock %}
 
 {% block main %}
-    <div class="comment-box"></div>
+    <div class="comment-box">
+    <div class="comment-top-box">
+        <span>Comments:</span>
+    </div>
+    </div>
     <div class="self-comment-box"></div>
     <div class="prev"></div>
     <div class="next"></div>
