--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@ type:当前用户类型，1为买家，0为卖家
 <div class="top-box">
 {#LOGO#}
     <div class="logo-box">
-        <img src="{{ url_for('static', filename='img/logo.img') }}" alt="LOGO">
+        <img src="/static/img/Logo.jpeg" alt="LOGO">
     </div>
 {#可能的searchbox#}
     <div class="search-box">
