--- a/templates/base_begin.html
+++ b/templates/base_begin.html
@@ -3,7 +3,7 @@
 {% block main %}
     <link rel="stylesheet" href="/static/css/base_begin.css">
     <div class="left-box">
-        <img src="static/login.jpg" alt="login-logo">
+        <img src="/static/img/login-logo.png" alt="login-logo">
     </div>
     <div class="right-box">
         {% block right_box %} {% endblock %}
