--- a/templates/base.html
+++ b/templates/base.html
@@ -69,9 +69,10 @@ type:当前用户类型，1为买家，0为卖家
 
                 $(document).trigger("sessionLoaded");
                 get_user_image();
-                },
+            },
             error:function (){
                 $(document).trigger("sessionLoaded");
+                get_user_image();
             }
         })
     }
