--- a/templates/shop.html
+++ b/templates/shop.html
@@ -150,7 +150,7 @@
 {% endblock %}
 
 {% block search_box %}
-    <input type="search" id="search-box" placeholder="输入商品" onkeyup="get_item()">
+    <input type="search" id="search-box" placeholder="search item by name" onkeyup="get_item()">
 {% endblock %}
 
 {% block main %}
