--- a/templates/item.html
+++ b/templates/item.html
@@ -136,12 +136,10 @@
                     quantity: buy_num.value,
                 },
                 success: function (data) {
+                    alert(data.message);
                     if (data.success) {
-                        alert("success")
-                    } else {
-                        alert(data.error)
+                        render_item_data();
                     }
-                    render_item_data()
                 }
             })
         };
